refactor : 미사용 메서드 제거 및 네이밍 수정